<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/settings_account_preferences">
        <PreferenceScreen
            android:title="@string/settings_user_profile"
            android:summary="@string/settings_user_profile_description">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="edu.dartmouth.cs.xiankai_yang_myruns"
                android:targetClass="edu.dartmouth.cs.xiankai_yang_myruns.controller.ProfileActivity"/>
        </PreferenceScreen>
        <CheckBoxPreference
            android:title="@string/settings_privacy_setting"
            android:summary="@string/settings_privacy_setting_description"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_additional_settings">
        <ListPreference
            android:title="@string/settings_unit_preference"
            android:summary="@string/settings_unit_preference_description"
            android:entries="@array/settings_unit_preference_options"
            android:entryValues="@array/settings_unit_preference_options"/>
        <EditTextPreference
            android:title="@string/settings_comments"
            android:summary="@string/settings_comments_description"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_misc">
        <PreferenceScreen
            android:title="@string/settings_web_page"
            android:summary="@string/settings_web_page_address">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_web_page_address" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>