<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="edu.dartmouth.cs.xiankai_yang_myruns.ProfileActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/profile_default_image"/>
            <Button
                android:onClick="onClickChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/change"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"/>
        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:backgroundTint="@android:color/background_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"/>
        <EditText
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_email_hint"
            android:inputType="text"
            android:maxLines="1"
            android:backgroundTint="@android:color/background_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone"/>
        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_phone_hint"
            android:inputType="number"
            android:backgroundTint="@android:color/background_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_gender"/>
        <RadioGroup
            android:id="@+id/profile_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/profile_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_gender_female"
                android:layout_weight="1"
                android:buttonTint="@android:color/background_dark"/>
            <RadioButton
                android:id="@+id/profile_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_gender_male"
                android:layout_weight="1"
                android:buttonTint="@android:color/background_dark"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_class"/>
        <EditText
            android:id="@+id/profile_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_class_hint"
            android:inputType="number"
            android:backgroundTint="@android:color/background_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_major"/>
        <EditText
            android:id="@+id/profile_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_major_hint"
            android:inputType="text"
            android:maxLines="1"
            android:backgroundTint="@android:color/background_dark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:onClick="onClickSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1"
                android:layout_margin="10dp"/>
            <Button
                android:onClick="onClickCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_margin="10dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>