<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_input_type"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/start_input_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/start_input_type_options"
        android:layout_margin="10dp">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_activity_type"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/start_activity_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/start_activity_type_options"
        android:layout_margin="10dp">
    </Spinner>

    <Button
        android:id="@+id/start_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_start"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/start_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_sync"
        android:layout_margin="10dp"/>

</LinearLayout>